fix: table vertical align

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -37,7 +37,7 @@ $border-bottom: 1px solid $color;
 .cell {
   padding: $padding;
   line-height: 1.42857143;
-  vertical-align: top;
+  vertical-align: middle;
   border-bottom: $border-bottom;
 }
 
